# rag-scrapbox-with-local-llm

./: README.md  architecture.md  compose.yml
elasticsearch/: Dockerfile  README.md  compose.yml
gemma-api/: Dockerfile  README.md  compose.yml  pyproject.toml
gemma-api/api/: main.py  models.py
gemma-api/tests/: test_api.py
ingestion-batch/: .env.example  Dockerfile  README.md  compose.yml  pyproject.toml
ingestion-batch/batch/: config.py  elasticsearch_client.py  main.py  processor.py  scrapbox.py
ingestion-batch/tests/: test_processor.py
search-api/: Dockerfile  README.md  compose.yml  pyproject.toml
search-api/api/: config.py  deps.py  encoder.py  llm.py  main.py  models.py  search.py
search-api/tests/: conftest.py  test_api.py  test_llm.py  test_search.py
splade-encoder-api/: Dockerfile  README.md  compose.yml  pyproject.toml
splade-encoder-api/api/: deps.py  encoder.py  main.py  models.py
splade-encoder-api/api/routers/: __init__.py  encoder.py  health.py
splade-encoder-api/tests/: test_logic.py  test_splade.py
web-ui/: .dockerignore  README.md  compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-ui/docker/: Dockerfile  nginx.conf
web-ui/src/: App.tsx  index.css  types.ts
web-ui/src/components/: ChatArea.tsx  ChatInput.tsx  Navbar.tsx  Sidebar.tsx  SourceSection.tsx
