[project]
name = "ingestion-batch"
version = "0.1.0"
description = "Scrapbox to Elasticsearch ingestion batch"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "elasticsearch>=8.0.0,<9.0.0",
    "pydantic",
    "pydantic-settings",
    "loguru",
    "tqdm",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
